progress and ui

--- a/src/app/dropzone/progressbar/progressbar.component.html
+++ b/src/app/dropzone/progressbar/progressbar.component.html
@@ -1,5 +1,5 @@
-<div class="outer_progress">
-  <div class="inner_progress" [style.width]="getInnerWidth()">
+<div class="progress">
+  <div class="progress-bar" [style.width.]="getInnerWidth()">
+    {{progress}}
   </div>
-  <span>{{progress}}</span>
 </div>
